--- a/index.html
+++ b/index.html
@@ -7,24 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
-            --bg-primary: #f0f2f5;
-            --bg-secondary: #ffffff;
-            --text-primary: #1c1e21;
-            --text-secondary: #606770;
-            --border-primary: #e0e0e0;
-            --accent-primary: #1b74e4;
-            --accent-primary-hover: #186ac9;
-            --accent-secondary: #42b72a;
-            --accent-secondary-hover: #3ba326;
+            --bg-primary: #f0f2f5; --bg-secondary: #ffffff; --text-primary: #1c1e21; --text-secondary: #606770; --border-primary: #e0e0e0; --accent-primary: #1b74e4; --accent-primary-hover: #186ac9; --accent-secondary: #42b72a; --accent-secondary-hover: #3ba326;
         }
         html.dark {
-            --bg-primary: #18191a;
-            --bg-secondary: #242526;
-            --text-primary: #e4e6eb;
-            --text-secondary: #b0b3b8;
-            --border-primary: #3a3b3c;
-            --accent-primary: #2d88ff;
-            --accent-primary-hover: #297be2;
+            --bg-primary: #18191a; --bg-secondary: #242526; --text-primary: #e4e6eb; --text-secondary: #b0b3b8; --border-primary: #3a3b3c; --accent-primary: #2d88ff; --accent-primary-hover: #297be2;
         }
         body { background-color: var(--bg-primary); color: var(--text-primary); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; transition: background-color 0.2s, color 0.2s; }
         .main-container { background-color: var(--bg-secondary); border-radius: 8px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1); }
@@ -38,9 +24,10 @@
         .btn-secondary:hover { background-color: var(--accent-secondary-hover); }
         .loader { border-color: rgba(255, 255, 255, 0.2); border-top-color: #fff; animation: spin 1s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
+        /* --- SLIDER FIX: aspect-ratio is set by JS to match the original image --- */
         .comparison-slider { position: relative; overflow: hidden; border: 1px solid var(--border-primary); border-radius: 6px; width: 100%; }
-        .comparison-slider img { display: block; width: 100%; height: auto; object-fit: contain; }
-        .comparison-slider .after-image { position: absolute; top: 0; left: 0; width: 100%; height: 100%; clip-path: inset(0 50% 0 0); }
+        .comparison-slider img { display: block; width: 100%; height: 100%; /* Force images to fill container */ object-fit: contain; }
+        .comparison-slider .after-image { position: absolute; top: 0; left: 0; clip-path: inset(0 50% 0 0); }
         .comparison-slider .slider-handle { position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 4px; height: 100%; background-color: var(--accent-primary); cursor: ew-resize; display: flex; align-items: center; justify-content: center; }
         .comparison-slider .slider-handle-button { width: 30px; height: 30px; background-color: var(--accent-primary); border-radius: 50%; color: white; font-size: 16px; display: flex; align-items: center; justify-content: center; box-shadow: 0 0 10px rgba(0,0,0,0.3); user-select: none; }
         .hidden { display: none; }
@@ -86,7 +73,9 @@
             </section>
 
             <section id="result-view" class="hidden">
-                <h2 class="text-xl font-bold mb-3 text-center">Your masterpiece is ready!</h2>
+                <h2 class="text-xl font-bold mb-1 text-center">Your masterpiece is ready!</h2>
+                <!-- TWEAK: Added paragraph to display the prompt -->
+                <p id="result-prompt" class="text-center text-sm text-secondary mb-3 italic break-words"></p>
                 <div id="comparison-slider" class="comparison-slider">
                     <img id="before-image" src="#" alt="Original Image">
                     <img id="after-image" src="#" class="after-image" alt="Edited Image">
@@ -121,10 +110,13 @@
         const beforeImage = document.getElementById('before-image');
         const afterImage = document.getElementById('after-image');
         const downloadButton = document.getElementById('download-button');
+        const comparisonSlider = document.getElementById('comparison-slider');
+        const resultPrompt = document.getElementById('result-prompt');
         
         let originalFile = null;
         let originalFileUrl = null;
         let originalDimensions = { width: 0, height: 0 };
+        let currentPrompt = '';
 
         const sunIcon = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>`;
         const moonIcon = `<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>`;
@@ -149,7 +141,6 @@
         };
 
         const resetToUpload = () => {
-            // --- THIS IS THE FIX: Properly clean up the URL when done ---
             if (originalFileUrl) URL.revokeObjectURL(originalFileUrl);
             originalFile = null;
             originalFileUrl = null;
@@ -176,32 +167,27 @@
             const img = new Image();
             img.onload = () => {
                 originalDimensions = { width: img.naturalWidth, height: img.naturalHeight };
-                // --- THIS IS THE FIX: We NO LONGER revoke the URL here ---
-                // URL.revokeObjectURL(img.src); // <-- THIS WAS THE BUG. REMOVED.
+                // --- THIS IS THE FIX: Set aspect ratio on the slider container ---
+                comparisonSlider.style.aspectRatio = `${img.naturalWidth} / ${img.naturalHeight}`;
                 imagePreview.src = originalFileUrl;
                 beforeImage.src = originalFileUrl;
                 showView(editView);
             };
-            // We use the same URL for measuring and for display
             img.src = originalFileUrl;
         };
 
         dropzone.addEventListener('click', () => imageInput.click());
         dropzone.addEventListener('dragover', (e) => { e.preventDefault(); dropzone.classList.add('dragover'); });
         dropzone.addEventListener('dragleave', () => dropzone.classList.remove('dragover'));
-        dropzone.addEventListener('drop', (e) => {
-            e.preventDefault();
-            dropzone.classList.remove('dragover');
-            if (e.dataTransfer.files.length) handleFileSelect(e.dataTransfer.files[0]);
-        });
+        dropzone.addEventListener('drop', (e) => { e.preventDefault(); dropzone.classList.remove('dragover'); if (e.dataTransfer.files.length) handleFileSelect(e.dataTransfer.files[0]); });
         imageInput.addEventListener('change', (e) => { if (e.target.files.length) handleFileSelect(e.target.files[0]); });
         
         resetButton.addEventListener('click', resetToUpload);
         newEditButton.addEventListener('click', resetToUpload);
 
         generateButton.addEventListener('click', async () => {
-            const prompt = promptInput.value.trim();
-            if (!prompt) {
+            currentPrompt = promptInput.value.trim();
+            if (!currentPrompt) {
                 alert('Please describe your edit.');
                 return;
             }
@@ -219,7 +205,7 @@
                         image: base64Image,
                         imageName: compressedFile.name,
                         imageType: compressedFile.type,
-                        prompt: prompt,
+                        prompt: currentPrompt,
                         width: originalDimensions.width,
                         height: originalDimensions.height,
                     }),
@@ -235,6 +221,8 @@
                 if (data.edited_image_url) {
                     afterImage.src = data.edited_image_url;
                     downloadButton.href = data.edited_image_url;
+                    // --- TWEAK: Display the prompt ---
+                    resultPrompt.textContent = `Prompt: "${currentPrompt}"`;
                     showView(resultView);
                 } else {
                     throw new Error('Could not find the edited image in the response.');
@@ -247,15 +235,13 @@
             }
         });
 
-        const slider = document.getElementById('comparison-slider');
         const sliderHandle = document.getElementById('slider-handle');
-
         let isDragging = false;
         const startDragging = (e) => { e.preventDefault(); isDragging = true; };
         const stopDragging = () => { isDragging = false; };
         const moveSlider = (clientX) => {
             if (!isDragging) return;
-            const rect = slider.getBoundingClientRect();
+            const rect = comparisonSlider.getBoundingClientRect();
             let x = clientX - rect.left;
             x = Math.max(0, Math.min(x, rect.width));
             const percent = (x / rect.width) * 100;
@@ -263,8 +249,8 @@
             afterImage.style.clipPath = `inset(0 ${100 - percent}% 0 0)`;
         };
 
-        slider.addEventListener('mousedown', startDragging);
-        slider.addEventListener('touchstart', startDragging, { passive: false });
+        comparisonSlider.addEventListener('mousedown', startDragging);
+        comparisonSlider.addEventListener('touchstart', startDragging, { passive: false });
         document.addEventListener('mouseup', stopDragging);
         document.addEventListener('touchend', stopDragging);
         document.addEventListener('mousemove', (e) => moveSlider(e.clientX));
