--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Kamuy ✨ AI Image Editor</title>
-    <!-- Link to the new stylesheet -->
+    <!-- THIS SCRIPT IS ESSENTIAL AND IS NOW BACK IN THE HTML -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- This now correctly links to our custom styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
@@ -62,7 +64,7 @@
         </main>
     </div>
 
-    <!-- Link to the new JavaScript file -->
+    <!-- Link to the JavaScript file -->
     <script src="script.js" defer></script>
 </body>
 </html>
